--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vueapp",
+  "name": "reminder",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "reminder vue project",
   "author": "wojtek534 <wojtek.rzepkaa@gmail.com>",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "tether": "^1.4.3",
